--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,10 @@
       name="description"
       content="Tools for working with Apple Music Playlists"
     />
-    <script src="https://js-cdn.music.apple.com/musickit/v1/musickit.js"></script>
     <title>Playlist Tools</title>
+    <script src="https://js-cdn.music.apple.com/musickit/v1/musickit.js"></script>
+    <meta name="apple-music-app-name" content="Playlist Merge Tool"/>
+    <link rel="apple-music-app-icon" href="icon.svg" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
